# faiss

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: mps.yml
build-mps/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-mps-cpp/: CMakeCache.txt
build-mps-py/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-mps-py/benchs/: Makefile  cmake_install.cmake
build-mps-py/demos/: Makefile  cmake_install.cmake
build-mps-py/faiss/: Makefile  cmake_install.cmake
build-mps-py/faiss/gpu/: Makefile  cmake_install.cmake
build-mps-py/faiss/python/: Makefile  __init__.py  cmake_install.cmake
build-mps-py/perf_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mps-py/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  faiss_test[1]_include.cmake
build-mps-py/tutorial/cpp/: Makefile  cmake_install.cmake
build-mps/Testing/Temporary/: CTestCostData.txt
build-mps/benchs/: Makefile  cmake_install.cmake
build-mps/demos/: Makefile  cmake_install.cmake
build-mps/faiss/: Makefile  cmake_install.cmake
build-mps/faiss/gpu/: Makefile  cmake_install.cmake
build-mps/perf_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mps/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_aa2e969f68.json  faiss_test[1]_include.cmake  faiss_test[1]_tests.cmake
build-mps/tutorial/cpp/: Makefile  cmake_install.cmake
build_cpp/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_cpp/Testing/Temporary/: CTestCostData.txt
build_cpp/benchs/: Makefile  cmake_install.cmake
build_cpp/demos/: Makefile  cmake_install.cmake
build_cpp/faiss/: Makefile  cmake_install.cmake
build_cpp/faiss/gpu/: Makefile  (+1 more)
build_cpp/perf_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_cpp/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_aa2e969f68.json  faiss_test[1]_include.cmake  faiss_test[1]_tests.cmake
build_py/: CMakeCache.txt  Makefile  cmake_install.cmake
build_py/benchs/: Makefile  cmake_install.cmake
build_py/demos/: Makefile  cmake_install.cmake
build_py/faiss/: Makefile  cmake_install.cmake
c_api/gpu/: CMakeLists.txt  DeviceUtils_c.h  GpuResources_c.h  StandardGpuResources_c.h
demos/: demo_mps_faiss.py
faiss/: CMakeLists.txt
faiss/gpu/: CMakeLists.txt  GpuApi.h  GpuIndexIVF.h  GpuIndexIVFFlat.h  GpuIndexIVFPQ.h  GpuResources.h  StandardGpuResources.h
faiss/python/: CMakeLists.txt  setup.py  swigfaiss.swig
tests/: CMakeLists.txt  test_mmap.cpp  test_mps_demo_smoke.py  test_mps_torch_interop.py  test_python_packaging.py
(+80 files in other folders)
